Profile (#17)
* Switched login data to email on backend

* Added user icon to backend

* Added user field update endpoints

* Updated swagger descriptions

* Updated swagger to new rules

* Fixed backend get user function

* Icon functionality on frontend

* Fixed displaying profile icon

* Added send icon function

* Changed the name fetchUser to getUser

* Rewrote user getting function in context

* Added update user function

* Added update password function

* useCallback when calling function in useEffect

* Separated AuthContext and api calls

* Added new changes to merged main

* Profile checkpoint #1

* Fix logout issue

* Added Profile page

* Preprocess sent icon

* Populate field with current user value

* Remove saving user_icon when None

* Brought back forms in Profile

* Show current value of field

* Removed unnecessary file changes

* Polish words used in UI

* Added validation to passwords

* Added validation to passwords 2

* Added validation to passwords 3

* New User version 1

* New User version 2

* Fix icon sending

* User fields validation

* Differentiate Profile files

* Fixed backend to frontend user mapping
